--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 services:
   producer-app:
     container_name: producer-app
@@ -10,31 +10,42 @@ services:
       - "8080:8080"
     networks:
       - project-streams-network
-  
-  kafka-zookeeper-1:
+
+  streams-api:
+    container_name: streams-api
+    build:
+      context: streams-api
+      dockerfile: Dockerfile
+    image: streams-api:latest
+    ports:
+      - "8082:8082"
+    networks:
+      - project-streams-network
+
+  zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
-    hostname: kafka-zookeeper-1
-    container_name: kafka-zookeeper-1
+    hostname: zookeeper
+    container_name: zookeeper
     ports:
       - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_SERVER_ID: 1
-      ZOOKEEPER_SERVERS: kafka-zookeeper-1:2888:3888
+      ZOOKEEPER_SERVERS: zookeeper:2888:3888
 
-  kafka-cluster-1:
+  kafka-broker-1:
     image: confluentinc/cp-kafka:7.2.1
-    hostname: kafka-cluster-1
-    container_name: kafka-cluster-1
+    hostname: kafka-broker-1
+    container_name: kafka-broker-1
     ports:
       - "9092:9092"
       - "29092:29092"
       - "9999:9999"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-cluster-1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-broker-1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "kafka-zookeeper-1:2181"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
       KAFKA_BROKER_ID: 1
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -45,8 +56,21 @@ services:
       KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
     depends_on:
-      - kafka-zookeeper-1
+      - zookeeper
 
+  kafka-schema-registry:
+    image: confluentinc/cp-schema-registry:7.2.1
+    hostname: kafka-schema-registry
+    container_name: kafka-schema-registry
+    depends_on:
+      - zookeeper
+      - kafka-broker-1
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: kafka-schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka-broker-1:19092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
 networks:
   project-streams-network:
     driver: bridge
