--- a/streams-api/src/main/resources/application.properties
+++ b/streams-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 app.kafka.topic-name=sales
-spring.kafka.bootstrap.servers="kafka-broker-1:19092"
+server.port=8082
+spring.kafka.bootstrap-servers=localhost:29092
 #logging.level.root=DEBUG
